Fix spacing of collage photo

--- a/public/_scss/components/mentorship.scss
+++ b/public/_scss/components/mentorship.scss
@@ -21,4 +21,9 @@
       width: 300px;
     }
   }
+
+  &--collage {
+    margin-top: 70px;
+    margin-bottom: -70px;
+  }
 }
